fixed sections on small phones

--- a/hackathon/css/main.css
+++ b/hackathon/css/main.css
@@ -134,11 +134,9 @@ img {
 
 /* ABOUT */
 .about {
-    height: 100vh;
+    height: auto;
     width: 100%;
-    padding-left: 50px;
-    padding-right: 50px;
-
+    padding: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -158,7 +156,7 @@ img {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 1px;
     font-weight: 400;
-    line-height: calc(1.4*1.4rem);
+    line-height: calc(1.2*1.2rem);
     color: rgba(255, 255, 255, 0.7);
 }
 
@@ -513,15 +511,20 @@ img {
         margin-right: 40px;
     }
 
-}
-
-@media only screen and (max-width: 600px) {
     .about {
         height: auto;
     }
 
-    .about p{
+    .about p {
         line-height: 25px;
         font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .faq{
+        height: auto;
+        padding-top: 20px;
+        padding-bottom:20px ;
     }
 }
